# RayTracerOTW

./: CMakeLists.txt  README.MD
contrib/include/SDL2/: SDL_main.h
contrib/include/glm/detail/: setup.hpp
src/: ConsoleMenu.cpp  Renderer.cpp  Renderer.h  main.cpp
